--- a/errata.tex
+++ b/errata.tex
@@ -132,11 +132,13 @@ $\ket{\Psi_{0}}$ also serves an example that a product state has
 $\overline{P_{\fh}}=0$ because of modular arithmetic. In the continuous
 case, $\overline{P_{\fh}}=0$ is equivalent to 
 \begin{equation}
-\forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}=0\label{eq:john}\ .
+\forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}=0\ .\label{eq:john}
 \end{equation}
-Equation (\ref{eq:john}) defines maximally entangled states over $\ff{p^{2}}$
-as well. From this definition, the Bell states are maximally entangled,
-while the normalized state $\ket{\Psi_{2}} = \ket{01}+\ket{10}+\left(-1-\ComplexI\right)$ over $\ff{3^{2}}$ is not maximally entangled although $\overline{P_{\fh}^{j}}=0$ for all $j$.
+Equation (\ref{eq:john}) defines maximally entangled states over
+$\ff{p^{2}}$ as well. From this definition, the Bell states are maximally
+entangled, while the normalized state $\ket{\Psi_{2}}=\ket{01}+\ket{10}+\left(-1-\ComplexI\right)$
+with $\overline{P_{\fh}^{j}}=0$ for all $j$ over $\ff{3^{2}}$ is
+not maximally entangled.
 
 Computing some examples for various $n$ and small values of $p$,
 one can verify explicitly that unit-norm product states for $n=2$,
