--- a/errata.tex
+++ b/errata.tex
@@ -134,9 +134,9 @@ case, $\overline{P_{\fh}}=0$ is equivalent to
 \begin{equation}
 \forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}=0\ .\label{eq:john}
 \end{equation}
-Equation (\ref{eq:john}) defines maximally entangled states over
-$\ff{p^{2}}$ as well. From this definition, the Bell states are maximally
-entangled, while the normalized state $\ket{\Psi_{2}}=\ket{01}+\ket{10}+\left(-1-\ComplexI\right)$
+In discrete case, it turns out that equation (\ref{eq:john}) is the
+one defines maximally entangled states. From this definition, the
+Bell states are maximally entangled, while the normalized state $\ket{\Psi_{2}}=\ket{01}+\ket{10}+\left(-1-\ComplexI\right)\ket{11}$
 with $\overline{P_{\fh}^{j}}=0$ for all $j$ over $\ff{3^{2}}$ is
 not maximally entangled.
 
