--- a/errata.lyx
+++ b/errata.lyx
@@ -1,4 +1,4 @@
-#LyX 2.1 created this file. For more info see http://www.lyx.org/
+#LyX file created by tex2lyx 2.1
 \lyxformat 474
 \begin_document
 \begin_header
@@ -57,12 +57,16 @@
 \addtocounter{equation}{39}
 \addtocounter{section}{5}
 \addtocounter{subsection}{3}
+
+
+
+
 \end_preamble
 \use_default_options false
 \maintain_unincluded_children false
-\language american
-\language_package default
-\inputencoding auto
+\language english
+\language_package none
+\inputencoding iso8859-15
 \fontencoding T1
 \font_roman default
 \font_sans default
@@ -129,13 +133,11 @@ Erratum: Geometry of discrete quantum computing
 \end_layout
 
 \begin_layout Author
-Andrew J.
- Hanson
+Andrew J. Hanson
 \end_layout
 
 \begin_layout Address
-School of Informatics and Computing, Indiana University, Bloomington, IN
- 47405, U.S.A
+School of Informatics and Computing, Indiana University, Bloomington, IN 47405, U.S.A
 \end_layout
 
 \begin_layout Author
@@ -151,8 +153,7 @@ Amr Sabry
 \end_layout
 
 \begin_layout Address
-School of Informatics and Computing, Indiana University, Bloomington, IN
- 47405, U.S.A
+School of Informatics and Computing, Indiana University, Bloomington, IN 47405, U.S.A
 \end_layout
 
 \begin_layout Author
@@ -164,8 +165,7 @@ Department of Mathematics, Indiana University, Bloomington, IN 47405, U.S.A
 \end_layout
 
 \begin_layout Address
-School of Informatics and Computing, Indiana University, Bloomington, IN
- 47405, U.S.A
+School of Informatics and Computing, Indiana University, Bloomington, IN 47405, U.S.A
 \end_layout
 
 \begin_layout Standard
@@ -178,7 +178,6 @@ status collapsed
 
 \begin_layout Plain Layout
 
-
 \backslash
 /
 \end_layout
@@ -186,13 +185,14 @@ status collapsed
 \end_inset
 
 
+\family default
+\series default
 \shape default
 : 
 \begin_inset ERT
 status collapsed
 
 \begin_layout Plain Layout
-
 {
 \end_layout
 
@@ -203,7 +203,6 @@ status collapsed
 status collapsed
 
 \begin_layout Plain Layout
-
 
 \backslash
 today
@@ -216,7 +215,6 @@ today
 status collapsed
 
 \begin_layout Plain Layout
-
 }
 \end_layout
 
@@ -227,356 +225,99 @@ status collapsed
 
 \begin_layout Standard
 \noindent
-We correct section
+Sec.
 \begin_inset space ~
+
 \end_inset
 
 5.4 of our paper
 \begin_inset space ~
+
 \end_inset
 
 
 \begin_inset CommandInset citation
 LatexCommand cite
+after ""
 key "geometry"
 
 \end_inset
 
-.
- There are several related mistakes that all stem from an incorrect use
- of equation
-\begin_inset space ~
-\end_inset
-
-(27) in a discrete setting with modular arithmetic.
- Equation
-\begin_inset space ~
-\end_inset
-
-(27) defines purity from which the definitions of unentangled, partially
- entangled, and maximally entangled states were derived in the field of
- complex numbers.
- In finite fields, the definitions are more subtle.
- 
+ requires a clarification and a correction.
 \end_layout
 
 \begin_layout Paragraph*
-Purity, Product States, and Unentangled States.
+Clarification: Unentangled vs. product states.
 \end_layout
 
 \begin_layout Standard
-The paper correctly identifies unentangled states with product states.
- In the continuous case, a state has maximal purity iff it is a product
- state.
- In the discrete case, product states have maximal purity, but the converse
- does not necessarily hold.
- 
+In conventional quantum mechanics, using the real and complex numbers, a state is unentangled when it can be expressed as a product state or when equation
+\begin_inset space ~
+
+\end_inset
+
+(27) reports its purity to be 1. When using finite fields, it is possible for equation
+\begin_inset space ~
+
+\end_inset
+
+(27) to produce a purity of 1 for some entangled states. For example, consider the 3-qubit state \SpecialChar \ldots{}
+
+\end_layout
+
+\begin_layout Standard
+Thus, in finite fields, the simplest way to calculate the number of unentangled states is to ignore equation
+\begin_inset space ~
+
+\end_inset
+
+(27) and to count the number of product states. This is exactly how the counting in Sec.
+\begin_inset space ~
+
+\end_inset
+
+5.4 was produced but the paper did not clarify that counting using equation
+\begin_inset space ~
+
+\end_inset
+
+(27) would be incorrect.
 \end_layout
 
 \begin_layout Paragraph*
-Purity and Maximally Entangled States.
+Correction: Maximally entangled states.
 \end_layout
 
 \begin_layout Standard
-The paper defines maximally entangled states as those whose purity is 0.
- This definition needs to be modified in the discrete case to avoid identifying
- as maximally entangled states whose purity is a multiple of the field character
-istic.
-\end_layout
-
-\begin_layout Standard
-\begin_inset VSpace bigskip
-\end_inset
-
-The results in other sections do not depend on equation
+In conventional quantum mechanics, a state is maximally entangled when equation
 \begin_inset space ~
+
 \end_inset
 
-(27): the corrected version of section
+(27) reports its purity to be 0. In the discrete case, states whose purity is a multiple of the field characteristic are incorrectly labeled as maximally entangled. For example, \SpecialChar \ldots{}
+
+\end_layout
+
+\begin_layout Standard
+To correctly account for maximally entangled states, we modify equation
 \begin_inset space ~
+
 \end_inset
 
-5.4 below has no influence on the rest of the article.
-\end_layout
-
-\begin_layout Subsection
-Maximal entanglement
+(27) as follows:
 \end_layout
 
 \begin_layout Standard
-In the case of finite fields, we need to modify this definition because
- modular arithmetic confuses some of the identifications.
+\SpecialChar \ldots{}
+
 \end_layout
 
 \begin_layout Standard
-For instance, although product states and maximal purity can be identified
- when using complex arithmetic, there exist, in the discrete case, non-product
- states that also have maximal purity.
-\end_layout
 
-\begin_layout Standard
-The first step in adapting equation
-\begin_inset space ~
-\end_inset
-
-(27) to the discrete case is to eliminate the 
-\begin_inset Formula $1/n$
-\end_inset
-
- factor to avoid dividing by zero: 
-\begin_inset Formula 
-\begin{equation}
-\overline{P_{\fh}}=\sum\limits _{j=1}^{n}\overline{P_{\fh}^{j}},\qquad\mbox{with~}\overline{P_{\fh}^{j}}=\sum\limits _{\mu=x,y,z}\langle\sigma_{\mu}^{j}\rangle^{2}\ ,
-\end{equation}
-
-\end_inset
-
-where 
-\begin_inset Formula $\overline{P_{\fh}}\in\ff{p}$
-\end_inset
-
-.
-\end_layout
-
-\begin_layout Standard
-For example, consider the normalized product state 
-\begin_inset Formula $\ket{\Psi_{0}}$
-\end_inset
-
- and the normalized entangled state 
-\begin_inset Formula $\ket{\Psi_{1}}$
-\end_inset
-
- over 
-\begin_inset Formula $\ff{3^{2}}$
-\end_inset
-
-: 
-\begin_inset Formula 
-\begin{eqnarray}
-\ket{\Psi_{0}} & = & \ket{0}\otimes\frac{\ket{0}-\ket{1}}{1-\ComplexI}\otimes\frac{\ket{0}-\ket{1}}{1-\ComplexI}\ ,\\
-\ket{\Psi_{1}} & = & \ket{011}+\ket{100}+\ket{101}+\ket{110}\ .
-\end{eqnarray}
-
-\end_inset
-
-In both cases 
-\begin_inset Formula $\overline{P_{\fh}^{j}}=1$
-\end_inset
-
- for all 
-\begin_inset Formula $j$
-\end_inset
-
-: the states are not distinguished by purity.
-\end_layout
-
-\begin_layout Standard
-\begin_inset Formula $\ket{\Psi_{0}}$
-\end_inset
-
- also serves an example that a product state has 
-\begin_inset Formula $\overline{P_{\fh}}=0$
-\end_inset
-
- because of modular arithmetic.
- In the continuous case, 
-\begin_inset Formula $\overline{P_{\fh}}=0$
-\end_inset
-
- is equivalent to 
-\begin_inset Formula 
-\begin{equation}
-\forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}=0\ .\label{eq:john}
-\end{equation}
-
-\end_inset
-
-In discrete case, it turns out that equation (
-\begin_inset CommandInset ref
-LatexCommand ref
-reference "eq:john"
-
-\end_inset
-
-) is the one defines maximally entangled states.
- From this definition, the Bell states are maximally entangled, while the
- normalized state 
-\begin_inset Formula $\ket{\Psi_{2}}=\ket{01}+\ket{10}+\left(-1-\ComplexI\right)\ket{11}$
-\end_inset
-
- with 
-\begin_inset Formula $\overline{P_{\fh}^{j}}=0$
-\end_inset
-
- for all 
-\begin_inset Formula $j$
-\end_inset
-
- over 
-\begin_inset Formula $\ff{3^{2}}$
-\end_inset
-
- is not maximally entangled.
-\end_layout
-
-\begin_layout Standard
-Computing some examples for various 
-\begin_inset Formula $n$
-\end_inset
-
- and small values of 
-\begin_inset Formula $p$
-\end_inset
-
-, one can verify explicitly that unit-norm product states for 
-\begin_inset Formula $n=2$
-\end_inset
-
-, 
-\begin_inset Formula $p=\{3,7,11,19,\ldots\}$
-\end_inset
-
- occur with frequency 
-\begin_inset Formula 
-\begin{equation}
-(p+1)p^{2}(p-1)^{2}=\{144,14\,112,145\,200,2339\,280,\ldots\}\ ,
-\end{equation}
-
-\end_inset
-
-and for general 
-\begin_inset Formula $n$
-\end_inset
-
-, 
-\begin_inset Formula $(p+1)p^{n}(p-1)^{n}$
-\end_inset
-
-.
-\end_layout
-
-\begin_layout Standard
-The irreducible state counts are reduced by 
-\begin_inset Formula $(p+1)$
-\end_inset
-
-, giving 
-\begin_inset Formula 
-\begin{equation}
-p^{2}(p-1)^{2}=\{36,1764,12\,100,116\,964,\ldots\}\ ,
-\end{equation}
-
-\end_inset
-
-and in general for 
-\begin_inset Formula $n$
-\end_inset
-
--qubits, there are 
-\begin_inset Formula $p^{n}\left(p-1\right)^{n}$
-\end_inset
-
- instances of product pure states.
-\end_layout
-
-\begin_layout Standard
-Repeating the computation, we find maximally entanglement states with frequencie
-s for two qubits of 
-\begin_inset Formula 
-\begin{equation}
-p\left(p^{2}-1\right)\left(p+1\right)=\left\{ 96,2688,15\,840,136\,800,\ldots\right\} \ .
-\end{equation}
-
-\end_inset
-
-The irreducible state counts for maximal entanglement are reduced by 
-\begin_inset Formula $\left(p+1\right)$
-\end_inset
-
-, giving for 
-\begin_inset Formula $n=2$
-\end_inset
-
- 
-\begin_inset Formula 
-\begin{equation}
-p\left(p^{2}-1\right)=\left\{ 24,336,1320,6840,\ldots\right\} \ .
-\end{equation}
-
-\end_inset
-
-For three-qubits, there are 
-\begin_inset Formula $p^{3}\left(p^{4}-1\right)\left(p+1\right)$
-\end_inset
-
- instances of pure maximally entangled states.
- For four-qubits and 
-\begin_inset Formula $p=3$
-\end_inset
-
-, there are 
-\begin_inset Formula $2195\,538\,048$
-\end_inset
-
- instances of pure maximally entangled states, while the general formula
- for four-qubit states remains unclear.
-\end_layout
-
-\begin_layout Standard
 \begin_inset ERT
 status collapsed
 
 \begin_layout Plain Layout
-
-
-\backslash
-yutsung{
-\end_layout
-
-\end_inset
-
- 
-\begin_inset Formula 
-\begin{eqnarray*}
-2195\,538\,048 & = & 4\cdot548\,884\,512\ ,\\
-548\,884\,512 & = & 2^{5}\cdot3^{7}\cdot11\cdot23\cdot31\ .
-\end{eqnarray*}
-
-\end_inset
-
-The irreducible state counts for maximal entanglement for 
-\begin_inset Formula $n=4$
-\end_inset
-
- and 
-\begin_inset Formula $p=7$
-\end_inset
-
- is about 
-\begin_inset Formula $8.22\times10^{14}$
-\end_inset
-
-.
-\begin_inset ERT
-status collapsed
-
-\begin_layout Plain Layout
-
-}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset ERT
-status collapsed
-
-\begin_layout Plain Layout
-
 
 \backslash
 ack
@@ -589,7 +330,6 @@ ack
 status collapsed
 
 \begin_layout Plain Layout
-
 {}
 \end_layout
 
@@ -600,24 +340,16 @@ status collapsed
 status collapsed
 
 \begin_layout Plain Layout
-
 {
 \end_layout
 
 \end_inset
 
-We would like to thank John Gardiner for pointing out the need for this
- correction.
- This research was supported in part by Lilly Endowment, Inc., through its
- support for the Indiana University Pervasive Technology Institute, and
- in part by the Indiana METACyt Initiative.
- The Indiana METACyt Initiative at IU is also supported in part by Lilly
- Endowment, Inc.
+We would like to thank John Gardiner for pointing out the need for this correction.
 \begin_inset ERT
 status collapsed
 
 \begin_layout Plain Layout
-
 }
 \end_layout
 
@@ -631,11 +363,11 @@ References
 \end_layout
 
 \begin_layout Standard
+
 \begin_inset ERT
 status collapsed
 
 \begin_layout Plain Layout
-
 {}
 \end_layout
 
