--- a/errata.lyx
+++ b/errata.lyx
@@ -1,4 +1,4 @@
-#LyX file created by tex2lyx 2.1
+#LyX 2.1 created this file. For more info see http://www.lyx.org/
 \lyxformat 474
 \begin_document
 \begin_header
@@ -57,10 +57,6 @@
 \addtocounter{equation}{39}
 \addtocounter{section}{5}
 \addtocounter{subsection}{3}
-
-
-
-
 \end_preamble
 \use_default_options false
 \maintain_unincluded_children false
@@ -133,11 +129,13 @@ Erratum: Geometry of discrete quantum computing
 \end_layout
 
 \begin_layout Author
-Andrew J. Hanson
+Andrew J.
+ Hanson
 \end_layout
 
 \begin_layout Address
-School of Informatics and Computing, Indiana University, Bloomington, IN 47405, U.S.A
+School of Informatics and Computing, Indiana University, Bloomington, IN
+ 47405, U.S.A
 \end_layout
 
 \begin_layout Author
@@ -153,7 +151,8 @@ Amr Sabry
 \end_layout
 
 \begin_layout Address
-School of Informatics and Computing, Indiana University, Bloomington, IN 47405, U.S.A
+School of Informatics and Computing, Indiana University, Bloomington, IN
+ 47405, U.S.A
 \end_layout
 
 \begin_layout Author
@@ -165,7 +164,8 @@ Department of Mathematics, Indiana University, Bloomington, IN 47405, U.S.A
 \end_layout
 
 \begin_layout Address
-School of Informatics and Computing, Indiana University, Bloomington, IN 47405, U.S.A
+School of Informatics and Computing, Indiana University, Bloomington, IN
+ 47405, U.S.A
 \end_layout
 
 \begin_layout Standard
@@ -178,6 +178,7 @@ status collapsed
 
 \begin_layout Plain Layout
 
+
 \backslash
 /
 \end_layout
@@ -185,14 +186,13 @@ status collapsed
 \end_inset
 
 
-\family default
-\series default
 \shape default
 : 
 \begin_inset ERT
 status collapsed
 
 \begin_layout Plain Layout
+
 {
 \end_layout
 
@@ -203,6 +203,7 @@ status collapsed
 status collapsed
 
 \begin_layout Plain Layout
+
 
 \backslash
 today
@@ -215,6 +216,7 @@ today
 status collapsed
 
 \begin_layout Plain Layout
+
 }
 \end_layout
 
@@ -227,18 +229,15 @@ status collapsed
 \noindent
 Sec.
 \begin_inset space ~
-
 \end_inset
 
 5.4 of our paper
 \begin_inset space ~
-
 \end_inset
 
 
 \begin_inset CommandInset citation
 LatexCommand cite
-after ""
 key "geometry"
 
 \end_inset
@@ -247,38 +246,55 @@ key "geometry"
 \end_layout
 
 \begin_layout Paragraph*
-Clarification: Unentangled vs. product states.
+Clarification: Unentangled vs.
+ product states.
 \end_layout
 
 \begin_layout Standard
-In conventional quantum mechanics, using the real and complex numbers, a state is unentangled when it can be expressed as a product state or when equation
+In conventional quantum mechanics, using the real and complex numbers, a
+ state is unentangled when it can be expressed as a product state or when
+ equation
 \begin_inset space ~
+\end_inset
+
+(27) reports its purity to be 1.
+ When using finite fields, it is possible for equation
+\begin_inset space ~
+\end_inset
+
+(27) to produce a purity of 1 for some entangled states.
+ For example, consider the normalized 3-qubit state 
+\begin_inset Formula $\ket{\Psi_{0}}$
+\end_inset
+
+ over 
+\begin_inset Formula $\ff{7^{2}}$
+\end_inset
+
+: 
+\begin_inset Formula 
+\[
+\ket{\Psi_{0}}=\left(1+2\rmi\right)\ket{011}+\left(1+2\rmi\right)\ket{100}-\ket{101}-\ket{110}+\left(-3+\rmi\right)\ket{111}
+\]
 
 \end_inset
 
-(27) reports its purity to be 1. When using finite fields, it is possible for equation
-\begin_inset space ~
-
-\end_inset
-
-(27) to produce a purity of 1 for some entangled states. For example, consider the 3-qubit state \SpecialChar \ldots{}
 
 \end_layout
 
 \begin_layout Standard
-Thus, in finite fields, the simplest way to calculate the number of unentangled states is to ignore equation
+Thus, in finite fields, the simplest way to calculate the number of unentangled
+ states is to ignore equation
 \begin_inset space ~
-
 \end_inset
 
-(27) and to count the number of product states. This is exactly how the counting in Sec.
+(27) and to count the number of product states.
+ This is exactly how the counting in section
 \begin_inset space ~
-
 \end_inset
 
-5.4 was produced but the paper did not clarify that counting using equation
+5.4 was produced, but the paper did not clarify that counting using equation
 \begin_inset space ~
-
 \end_inset
 
 (27) would be incorrect.
@@ -289,35 +305,161 @@ Correction: Maximally entangled states.
 \end_layout
 
 \begin_layout Standard
+The corrected section 5.4 is as follow.
+\end_layout
+
+\begin_layout Subsection
+Maximal entanglement
+\end_layout
+
+\begin_layout Standard
 In conventional quantum mechanics, a state is maximally entangled when equation
 \begin_inset space ~
+\end_inset
+
+(27) reports its purity to be 0.
+ In the discrete case, states whose purity is a multiple of the field characteri
+stic are incorrectly labeled as maximally entangled.
+ For example, the normalized 3-qubit product state 
+\begin_inset Formula $\ket{\Psi_{1}}$
+\end_inset
+
+ over 
+\begin_inset Formula $\ff{3^{2}}$
+\end_inset
+
+: 
+\begin_inset Formula 
+\[
+\ket{\Psi_{1}}=\ket{0}\otimes\frac{\ket{0}-\ket{1}}{1-\rmi}\otimes\frac{\ket{0}-\ket{1}}{1-\rmi}
+\]
 
 \end_inset
 
-(27) reports its purity to be 0. In the discrete case, states whose purity is a multiple of the field characteristic are incorrectly labeled as maximally entangled. For example, \SpecialChar \ldots{}
-
-\end_layout
-
-\begin_layout Standard
-To correctly account for maximally entangled states, we modify equation
-\begin_inset space ~
+with 
+\begin_inset Formula 
+\[
+\overline{P_{\fh}}=\sum_{j=1}^{n}\sum_{\mu=x,y,z}\left\langle \sigma_{\mu}^{j}\right\rangle ^{2}=0\textrm{ .}
+\]
 
 \end_inset
 
-(27) as follows:
-\end_layout
-
-\begin_layout Standard
-\SpecialChar \ldots{}
 
 \end_layout
 
 \begin_layout Standard
+To correctly account for maximally entangled states, we modify the definition
+ of maximally entangled states as follows:
+\begin_inset Formula 
+\[
+\forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}=0
+\]
 
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Computing some examples for various 
+\begin_inset Formula $n$
+\end_inset
+
+ and small values of 
+\begin_inset Formula $p$
+\end_inset
+
+, one can verify explicitly that unit-norm product states for 
+\begin_inset Formula $n=2$
+\end_inset
+
+, 
+\begin_inset Formula $p=\{3,7,11,19,\ldots\}$
+\end_inset
+
+ occur with frequency 
+\begin_inset Formula 
+\[
+(p+1)p^{2}(p-1)^{2}=\{144,14\,112,145\,200,2339\,280,\ldots\}\ ,
+\]
+
+\end_inset
+
+and for general 
+\begin_inset Formula $n$
+\end_inset
+
+, 
+\begin_inset Formula $(p+1)p^{n}(p-1)^{n}$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+The irreducible state counts are reduced by 
+\begin_inset Formula $(p+1)$
+\end_inset
+
+, giving 
+\begin_inset Formula 
+\[
+p^{2}(p-1)^{2}=\{36,1764,12\,100,116\,964,\ldots\}\ ,
+\]
+
+\end_inset
+
+and in general for 
+\begin_inset Formula $n$
+\end_inset
+
+-qubits, there are 
+\begin_inset Formula $p^{n}\left(p-1\right)^{n}$
+\end_inset
+
+ instances of product pure states.
+\end_layout
+
+\begin_layout Standard
+Repeating the computation, we find maximally entanglement states with frequencie
+s for two qubits of 
+\begin_inset Formula 
+\[
+p\left(p-1\right)\left(p+1\right)^{2}=\left\{ 96,2688,15\,840,136\,800,\ldots\right\} \ .
+\]
+
+\end_inset
+
+The irreducible state counts for maximal entanglement are reduced by 
+\begin_inset Formula $\left(p+1\right)$
+\end_inset
+
+, giving for 
+\begin_inset Formula $n=2$
+\end_inset
+
+ 
+\begin_inset Formula 
+\[
+p\left(p^{2}-1\right)=\left\{ 24,336,1320,6840,\ldots\right\} \ .
+\]
+
+\end_inset
+
+For three-qubits, there are 
+\begin_inset Formula $p^{3}\left(p^{4}-1\right)\left(p+1\right)$
+\end_inset
+
+ instances of pure maximally entangled states, while the general formula
+ for four-qubit states remains unclear.
+\end_layout
+
+\begin_layout Standard
 \begin_inset ERT
 status collapsed
 
 \begin_layout Plain Layout
+
 
 \backslash
 ack
@@ -330,6 +472,7 @@ ack
 status collapsed
 
 \begin_layout Plain Layout
+
 {}
 \end_layout
 
@@ -340,16 +483,19 @@ status collapsed
 status collapsed
 
 \begin_layout Plain Layout
+
 {
 \end_layout
 
 \end_inset
 
-We would like to thank John Gardiner for pointing out the need for this correction.
+We would like to thank John Gardiner for pointing out the need for this
+ correction.
 \begin_inset ERT
 status collapsed
 
 \begin_layout Plain Layout
+
 }
 \end_layout
 
@@ -363,11 +509,11 @@ References
 \end_layout
 
 \begin_layout Standard
-
 \begin_inset ERT
 status collapsed
 
 \begin_layout Plain Layout
+
 {}
 \end_layout
 
@@ -377,7 +523,6 @@ status collapsed
 \end_layout
 
 \begin_layout Standard
- 
 \begin_inset CommandInset bibtex
 LatexCommand bibtex
 bibfiles "gardinerbib"
