From: Tai, Yu-Tsung Sent: Sunday, October 25, 2015 5:15 To: Ortiz, Gerardo <ortizg@indiana.edu> Cc: Hanson, Andrew J. <hansona@indiana.edu>; Sabry, Amr A. <sabry@indiana.edu> Subject: RE: product, unentangled, entangled, maximally entangled
Dear all, 

I agree that the previous email was not clear enough... Is this email
more clear? Besides, I put the examples and counting to erratum. The
attachment is pdf, and the source file is in the ShareLaTeX.

Conjecture: 
For a state \ket{Ψ}, the purity for all p is one if and only if \ket{Ψ}
is a product state.

Respond: 
The conjecture is not true in general. For example, consider
	\ket{Ψ2} = \ket{00} - 3 \ket{01} - 3 \ket{10} + 2 \ket{11} \ket{Ψ2} is
a product state over \ff{7²} because \ket{Ψ2} = (\ket{0} - 3 \ket{1})
\otimes (\ket{0} - 3 \ket{1}).
However, the purities of \ket{Ψ2} are 
Over \ff{3²}:	 \bar{P_h^1} = \bar{P_h^2} = 0 ; 
Over \ff{7²}:	 \bar{P_h^1} = \bar{P_h^2} = 1 ; 
Over \ff{11²}:	 \bar{P_h^1} = \bar{P_h^2} = 3 ; 
Over \ff{19²}:	 \bar{P_h^1} = \bar{P_h^2} = 3 ; 
Over \ff{19²}:	 \bar{P_h^1} = \bar{P_h^2} = undefined, because
\fnorm{Ψ2} = 0 ; 
where \bar{P_h^j} = \fnorm{Ψ2}^(-2) (\bracket{σ_x^j}² + \bracket{σ_y^j}²
+ \bracket{σ_z^j}²).
Therefore, \ket{Ψ2} is purity one over \ff{7²}, but not purity one when
p = 3, 11, 19, and 23.

Discussion:
Actually, it is reasonable that the purity of \ket{Ψ2} over other p's
are not one, because \ket{Ψ2} is not a product state when p = 3, 11, 19,
and \ket{Ψ2} is zero-normed when p = 23. In general, a non-zero-norm
product state in one p may be a zero-norm state or not a product state
in another p. The conclusion is that any statement about using different
p must be very careful, and may be better to at least follow the similar
procedure in DQT(II). 

Best regards,
Tai, Yu-Tsung (戴淯琮)
PhD student in Mathematics & Computer Science Indiana University,
Bloomington


-----Original Message-----
From: Ortiz, Gerardo 
Sent: Friday, October 23, 2015 10:07
To: Tai, Yu-Tsung <yuttai@i

--- a/errata.lyx
+++ b/errata.lyx
@@ -305,8 +305,7 @@ Correction: The definition of maximally entangled states.
 \end_layout
 
 \begin_layout Standard
-In order to correct to the definition of maximally entangled states, the
- last paragraph in page 16 should read
+The last paragraph in page 16 should read
 \end_layout
 
 \begin_layout Standard
@@ -340,7 +339,11 @@ stic are incorrectly labeled as maximally entangled.
 
 \end_inset
 
-with 
+with the purity without divided by 
+\begin_inset Formula $n$
+\end_inset
+
+: 
 \begin_inset Formula 
 \[
 \overline{P_{\fh}}=\sum_{j=1}^{n}\sum_{\mu=x,y,z}\left\langle \sigma_{\mu}^{j}\right\rangle ^{2}=0\textrm{ .}
@@ -369,11 +372,13 @@ To correctly account for maximally entangled states, we modify the definition
 \end_layout
 
 \begin_layout Paragraph*
-Correction: The counting of maximally entangled states.
+Correction: The number of maximally entangled states.
 \end_layout
 
 \begin_layout Standard
-Line 8 starting from 
+The number of maximally entangled states should also be updated according
+ to the updated definition of maximally entangled states.
+ Therefore, line 8 starting from 
 \begin_inset Quotes eld
 \end_inset
 
