--- a/errata.tex
+++ b/errata.tex
@@ -124,8 +124,7 @@ would be incorrect.
 
 \paragraph*{Correction: The definition of maximally entangled states.}
 
-In order to correct to the definition of maximally entangled states,
-the last paragraph in page 16 should read
+The last paragraph in page 16 should read
 
 \medskip{}
 
@@ -138,7 +137,7 @@ product state $\ket{\Psi_{1}}$ over $\ff{3^{2}}$:
 \[
 \ket{\Psi_{1}}=\ket{0}\otimes\frac{\ket{0}-\ket{1}}{1-\rmi}\otimes\frac{\ket{0}-\ket{1}}{1-\rmi}
 \]
-with 
+with the purity without divided by $n$: 
 \[
 \overline{P_{\fh}}=\sum_{j=1}^{n}\sum_{\mu=x,y,z}\left\langle \sigma_{\mu}^{j}\right\rangle ^{2}=0\textrm{ .}
 \]
@@ -155,9 +154,10 @@ definition of maximally entangled states as follows:
 
 \paragraph*{Correction: The counting of maximally entangled states.}
 
-Line 8 starting from ``Repeating the computation'' to the end of
+The number of maximally entangled states should also be updated according
+to the updated definition of maximally entangled states. Therefore,
+line 8 starting from ``Repeating the computation'' to the end of
 section 5.4 in page 17 should read\medskip{}
-
 
 Repeating the computation, we find maximally entanglement states with
 frequencies for two qubits of 
