Restore errata.tex to before the changes on 24th Oct 2015, 4:18 am

--- a/errata.tex
+++ b/errata.tex
@@ -98,17 +98,13 @@ IN 47405, U.S.A}
 
 \maketitle
 
-\noindent Sec.~5.4 of our paper~\cite{geometry} requires a clarification
-and two corrections.
-
-
-\paragraph*{Clarification: Unentangled vs. product states.}
+\noindent Sec.~5.4 of our paper~\cite{geometry} requires a clarification and a correction. 
 
 In conventional quantum mechanics, using the real and complex numbers,
 a state is unentangled when it can be expressed as a product state
 or when equation~(27) reports its purity to be 1. When using finite
 fields, it is possible for equation~(27) to produce a purity of 1
-for some entangled states. For example, consider the normalized entangled
+for some entangled states. For example, consider the normalized 3-qubit
 state $\ket{\Psi_{0}}$ over $\ff{7^{2}}$: 
 \[
 \ket{\Psi_{0}}=\left(1+2\rmi\right)\ket{011}+\left(1+2\rmi\right)\ket{100}-\ket{101}-\ket{110}+\left(-3+\rmi\right)\ket{111}
@@ -122,22 +118,22 @@ was produced, but the paper did not clarify that counting using equation~(27)
 would be incorrect.
 
 
-\paragraph*{Correction: The definition of maximally entangled states.}
+\paragraph*{Correction: Maximally entangled states.}
 
-The last paragraph in page 16 should read
+The corrected section 5.4 is as follow.
 
-\medskip{}
 
+\subsection{Maximal entanglement}
 
 In conventional quantum mechanics, a state is maximally entangled
 when equation~(27) reports its purity to be 0. In the discrete case,
 states whose purity is a multiple of the field characteristic are
 incorrectly labeled as maximally entangled. For example, the normalized
-product state $\ket{\Psi_{1}}$ over $\ff{3^{2}}$: 
+3-qubit product state $\ket{\Psi_{1}}$ over $\ff{3^{2}}$: 
 \[
 \ket{\Psi_{1}}=\ket{0}\otimes\frac{\ket{0}-\ket{1}}{1-\rmi}\otimes\frac{\ket{0}-\ket{1}}{1-\rmi}
 \]
-with the purity without divided by $n$: 
+with 
 \[
 \overline{P_{\fh}}=\sum_{j=1}^{n}\sum_{\mu=x,y,z}\left\langle \sigma_{\mu}^{j}\right\rangle ^{2}=0\textrm{ .}
 \]
@@ -148,16 +144,22 @@ definition of maximally entangled states as follows:
 \[
 \forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}=0
 \]
-\medskip{}
 
 
+Computing some examples for various $n$ and small values of $p$,
+one can verify explicitly that unit-norm product states for $n=2$,
+$p=\{3,7,11,19,\ldots\}$ occur with frequency 
+\[
+(p+1)p^{2}(p-1)^{2}=\{144,14\,112,145\,200,2339\,280,\ldots\}\ ,
+\]
+and for general $n$, $(p+1)p^{n}(p-1)^{n}$.
 
-\paragraph*{Correction: The counting of maximally entangled states.}
-
-The number of maximally entangled states should also be updated according
-to the updated definition of maximally entangled states. Therefore,
-line 8 starting from ``Repeating the computation'' to the end of
-section 5.4 in page 17 should read\medskip{}
+The irreducible state counts are reduced by $(p+1)$, giving 
+\[
+p^{2}(p-1)^{2}=\{36,1764,12\,100,116\,964,\ldots\}\ ,
+\]
+and in general for $n$-qubits, there are $p^{n}\left(p-1\right)^{n}$
+instances of product pure states.
 
 Repeating the computation, we find maximally entanglement states with
 frequencies for two qubits of 
