Update the example for product states...

--- a/errata.tex
+++ b/errata.tex
@@ -100,6 +100,8 @@ IN 47405, U.S.A}
 
 \noindent Sec.~5.4 of our paper~\cite{geometry} requires a clarification and a correction. 
 
+\paragraph*{Clarification: Unentangled vs. product states.}
+
 In conventional quantum mechanics, using the real and complex numbers,
 a state is unentangled when it can be expressed as a product state
 or when equation~(27) reports its purity to be 1. When using finite
@@ -107,7 +109,7 @@ fields, it is possible for equation~(27) to produce a purity of 1
 for some entangled states. For example, consider the normalized 3-qubit
 state $\ket{\Psi_{0}}$ over $\ff{7^{2}}$: 
 \[
-\ket{\Psi_{0}}=\left(1+2\rmi\right)\ket{011}+\left(1+2\rmi\right)\ket{100}-\ket{101}-\ket{110}+\left(-3+\rmi\right)\ket{111}
+\ket{\Psi_{0}}=\ket{011}+\left(-2-\rmi\right)\ket{100}+\ket{101}+\ket{110}
 \]
 
 
