--- a/errata.lyx
+++ b/errata.lyx
@@ -242,7 +242,7 @@ key "geometry"
 
 \end_inset
 
- requires a clarification and two corrections.
+ requires a clarification and a correction.
 \end_layout
 
 \begin_layout Paragraph*
@@ -263,7 +263,7 @@ In conventional quantum mechanics, using the real and complex numbers, a
 \end_inset
 
 (27) to produce a purity of 1 for some entangled states.
- For example, consider the normalized entangled state 
+ For example, consider the normalized 3-qubit state 
 \begin_inset Formula $\ket{\Psi_{0}}$
 \end_inset
 
@@ -274,7 +274,7 @@ In conventional quantum mechanics, using the real and complex numbers, a
 : 
 \begin_inset Formula 
 \[
-\ket{\Psi_{0}}=\left(1+2\rmi\right)\ket{011}+\left(1+2\rmi\right)\ket{100}-\ket{101}-\ket{110}+\left(-3+\rmi\right)\ket{111}
+\ket{\Psi_{0}}=\ket{011}+\left(-2-\rmi\right)\ket{100}+\ket{101}+\ket{110}
 \]
 
 \end_inset
@@ -301,18 +301,15 @@ Thus, in finite fields, the simplest way to calculate the number of unentangled
 \end_layout
 
 \begin_layout Paragraph*
-Correction: The definition of maximally entangled states.
+Correction: Maximally entangled states.
 \end_layout
 
 \begin_layout Standard
-The last paragraph in page 16 should read
+The corrected section 5.4 is as follow.
 \end_layout
 
-\begin_layout Standard
-\begin_inset VSpace defskip
-\end_inset
-
-
+\begin_layout Subsection
+Maximal entanglement
 \end_layout
 
 \begin_layout Standard
@@ -323,7 +320,7 @@ In conventional quantum mechanics, a state is maximally entangled when equation
 (27) reports its purity to be 0.
  In the discrete case, states whose purity is a multiple of the field characteri
 stic are incorrectly labeled as maximally entangled.
- For example, the normalized product state 
+ For example, the normalized 3-qubit product state 
 \begin_inset Formula $\ket{\Psi_{1}}$
 \end_inset
 
@@ -339,11 +336,7 @@ stic are incorrectly labeled as maximally entangled.
 
 \end_inset
 
-with the purity without divided by 
-\begin_inset Formula $n$
-\end_inset
-
-: 
+with 
 \begin_inset Formula 
 \[
 \overline{P_{\fh}}=\sum_{j=1}^{n}\sum_{\mu=x,y,z}\left\langle \sigma_{\mu}^{j}\right\rangle ^{2}=0\textrm{ .}
@@ -356,7 +349,7 @@ with the purity without divided by
 
 \begin_layout Standard
 To correctly account for maximally entangled states, we modify the definition
- of maximally entangled states as follows:
+ of maximally entangled states as follows: 
 \begin_inset Formula 
 \[
 \forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}=0
@@ -365,32 +358,66 @@ To correctly account for maximally entangled states, we modify the definition
 \end_inset
 
 
-\begin_inset VSpace defskip
-\end_inset
-
-
-\end_layout
-
-\begin_layout Paragraph*
-Correction: The number of maximally entangled states.
 \end_layout
 
 \begin_layout Standard
-The number of maximally entangled states should also be updated according
- to the updated definition of maximally entangled states.
- Therefore, line 8 starting from 
-\begin_inset Quotes eld
+Computing some examples for various 
+\begin_inset Formula $n$
 \end_inset
 
-Repeating the computation
-\begin_inset Quotes erd
+ and small values of 
+\begin_inset Formula $p$
 \end_inset
 
- to the end of section 5.4 in page 17 should read
-\begin_inset VSpace defskip
+, one can verify explicitly that unit-norm product states for 
+\begin_inset Formula $n=2$
 \end_inset
 
+, 
+\begin_inset Formula $p=\{3,7,11,19,\ldots\}$
+\end_inset
 
+ occur with frequency 
+\begin_inset Formula 
+\[
+(p+1)p^{2}(p-1)^{2}=\{144,14\,112,145\,200,2339\,280,\ldots\}\ ,
+\]
+
+\end_inset
+
+and for general 
+\begin_inset Formula $n$
+\end_inset
+
+, 
+\begin_inset Formula $(p+1)p^{n}(p-1)^{n}$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+The irreducible state counts are reduced by 
+\begin_inset Formula $(p+1)$
+\end_inset
+
+, giving 
+\begin_inset Formula 
+\[
+p^{2}(p-1)^{2}=\{36,1764,12\,100,116\,964,\ldots\}\ ,
+\]
+
+\end_inset
+
+and in general for 
+\begin_inset Formula $n$
+\end_inset
+
+-qubits, there are 
+\begin_inset Formula $p^{n}\left(p-1\right)^{n}$
+\end_inset
+
+ instances of product pure states.
 \end_layout
 
 \begin_layout Standard
@@ -496,6 +523,7 @@ status collapsed
 \end_layout
 
 \begin_layout Standard
+ 
 \begin_inset CommandInset bibtex
 LatexCommand bibtex
 bibfiles "gardinerbib"
