Rewrite the definition of purity and maximally entangled states...

--- a/errata.tex
+++ b/errata.tex
@@ -136,10 +136,8 @@ incorrectly labeled as maximally entangled. For example, the normalized
 \[
 \ket{\Psi_{1}}=\ket{0}\otimes\left(\ket{0}-\ket{1}\right)\otimes\left(\ket{0}-\ket{1}\right)
 \]
-with the purity without $1/n$ factor: 
-\[
-\overline{P_{\fh}}=\sum_{j=1}^{n}\sum_{\mu=x,y,z}\left\langle \sigma_{\mu}^{j}\right\rangle ^{2}=0\textrm{ .}
-\]
+has the purity $\overline{P_{\fh}}=0$, where $\overline{P_{\fh}}=\sum_{j=1}^{n}\sum_{\mu=x,y,z}\left\langle \sigma_{\mu}^{j}\right\rangle ^{2}$
+is equation~(27) eliminate the $1/n$ factor.
 
 
 In continuous case, because the square of real numbers are positive,
@@ -148,8 +146,8 @@ is $0$, i.e.,
 \begin{equation}
 \forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}=0\ .\label{eq:john}
 \end{equation}
-Therefore, we define a state in discrete case is maximally entangled
-if it satisfies equation (\ref{eq:john}).
+Therefore, we define maximally entangled states over finite fields
+by equation (\ref{eq:john}).
 
 
 Computing some examples for various $n$ and small values of $p$,
