--- a/errata.lyx
+++ b/errata.lyx
@@ -337,19 +337,23 @@ stic are incorrectly labeled as maximally entangled.
 
 \end_inset
 
-with the purity without 
+has the purity 
+\begin_inset Formula $\overline{P_{\fh}}=0$
+\end_inset
+
+, where 
+\begin_inset Formula $\overline{P_{\fh}}=\sum_{j=1}^{n}\sum_{\mu=x,y,z}\left\langle \sigma_{\mu}^{j}\right\rangle ^{2}$
+\end_inset
+
+ is equation
+\begin_inset space ~
+\end_inset
+
+(27) eliminate the 
 \begin_inset Formula $1/n$
 \end_inset
 
- factor: 
-\begin_inset Formula 
-\[
-\overline{P_{\fh}}=\sum_{j=1}^{n}\sum_{\mu=x,y,z}\left\langle \sigma_{\mu}^{j}\right\rangle ^{2}=0\textrm{ .}
-\]
-
-\end_inset
-
-
+ factor.
 \end_layout
 
 \begin_layout Standard
@@ -374,8 +378,8 @@ In continuous case, because the square of real numbers are positive, the
 
 \end_inset
 
-Therefore, we define a state in discrete case is maximally entangled if
- it satisfies equation (
+Therefore, we define maximally entangled states over finite fields by equation
+ (
 \begin_inset CommandInset ref
 LatexCommand ref
 reference "eq:john"
