--- a/errata.tex
+++ b/errata.tex
@@ -136,8 +136,11 @@ incorrectly labeled as maximally entangled. For example, the normalized
 \[
 \ket{\Psi_{1}}=\ket{0}\otimes\left(\ket{0}-\ket{1}\right)\otimes\left(\ket{0}-\ket{1}\right)
 \]
-has the purity $\overline{P_{\fh}}=0$, where $\overline{P_{\fh}}=\sum_{j=1}^{n}\sum_{\mu=x,y,z}\left\langle \sigma_{\mu}^{j}\right\rangle ^{2}$
-is equation~(27) eliminate the $1/n$ factor.
+has the purity $\overline{P_{\fh}}=0$, where 
+\[
+\overline{P_{\fh}}=\sum_{j=1}^{n}\sum_{\mu=x,y,z}\left\langle \sigma_{\mu}^{j}\right\rangle ^{2}
+\]
+is equation~(27) eliminating the $1/n$ factor.
 
 
 In continuous case, because the square of real numbers are positive,
