Update the definition of maximally entangles states a little bit~~

--- a/errata.tex
+++ b/errata.tex
@@ -122,8 +122,8 @@ would be incorrect.
 
 \paragraph*{Correction: Maximally entangled states.}
 
-We correct the definition and the number of maximally entangled states
-in the following corrected section 5.4.
+We correct the definition and the counting of maximally entangled
+states in the following corrected section 5.4.
 
 
 \subsection{Maximal entanglement}
@@ -143,14 +143,14 @@ has the purity $\overline{P_{\fh}}=0$, where
 is equation~(27) eliminating the $1/n$ factor.
 
 
-In continuous case, because the square of real numbers are positive,
-the purity $\overline{P_{\fh}}$ is $0$ actually means every summand
-is $0$, i.e., 
+In continuous case, the zero purity actually means every summand is
+$0$, i.e., 
 \begin{equation}
-\forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}=0\ .\label{eq:john}
+\forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}=0\ ,\label{eq:john}
 \end{equation}
-Therefore, we define maximally entangled states over finite fields
-by equation (\ref{eq:john}).
+Because equation (\ref{eq:john}) avoids any wrapping around when
+adding expectation values, it defines maximally entangled states over
+finite fields.
 
 
 Computing some examples for various $n$ and small values of $p$,
