--- a/errata.lyx
+++ b/errata.lyx
@@ -305,8 +305,8 @@ Correction: Maximally entangled states.
 \end_layout
 
 \begin_layout Standard
-We correct the definition and the number of maximally entangled states in
- the following corrected section 5.4.
+We correct the definition and the counting of maximally entangled states
+ in the following corrected section 5.4.
 \end_layout
 
 \begin_layout Subsection
@@ -361,12 +361,7 @@ is equation
 \end_layout
 
 \begin_layout Standard
-In continuous case, because the square of real numbers are positive, the
- purity 
-\begin_inset Formula $0$
-\end_inset
-
- actually means every summand is 
+In continuous case, the zero purity actually means every summand is 
 \begin_inset Formula $0$
 \end_inset
 
@@ -378,15 +373,15 @@ In continuous case, because the square of real numbers are positive, the
 
 \end_inset
 
-Therefore, we define maximally entangled states over finite fields by equation
- (
+Because equation (
 \begin_inset CommandInset ref
 LatexCommand ref
 reference "eq:john"
 
 \end_inset
 
-).
+) avoids any wrapping around when adding expectation values, it defines
+ maximally entangled states over finite fields.
 \end_layout
 
 \begin_layout Standard
